python/testData/inspections/PyUnresolvedReferencesInspection/UnusedUnresolvedNameImported/a.py
<warning descr="Unused import statement">from my_module import <error descr="Unresolved reference 'eggs'">eggs</error></warning>
